--- a/index.css
+++ b/index.css
@@ -5,8 +5,8 @@
 }
 
 body{
-    background-color: black;
-    color: aliceblue;
+    background-color: #000000;
+    color: #ffffff;
     margin: 0;
 }
 
@@ -18,7 +18,7 @@ header{
 }
 
 nav ul li a{
-    color: chartreuse;
+    color: #00f27e;
     text-decoration: none;
     list-style: none;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -27,7 +27,7 @@ nav ul li a{
 }
 
 nav ul li a:hover{
-    color: aqua;
+    color: #a5e4f2;
     transition: 0.6s;
 }
 
@@ -71,8 +71,9 @@ width: 50em
     font-size: 30px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    margin-left: 1em;    
+   color: #1f1c0d;
    padding: -100px
-   color: rgb(8, 8, 8);
+   
    }
    
 #container-cofre p{
