--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ nav ul{
     margin-left: 8em;   
 }
 
-#container-cofre{
+#sobremessa{
     background: linear-gradient(180deg,#56877d 8.33%,rgba(2, 75, 47, 0.745)100%),url(Prancheta\ 1.jpg);
     background-position: center;
     background-attachment: fixed;
@@ -55,7 +55,7 @@ nav ul{
     padding: 15rem;
 }
 
-#container-cofre img{   
+#sobremessa img{   
 border-radius: 100px;    
 margin: 0;    
 margin-top: 0;
@@ -66,7 +66,7 @@ width: 50em
 }
 
 
-#container-cofre h1{
+#sobremessa h1{
     margin: 50px;
     font-size: 30px;
    font-family: Georgia, 'Times New Roman', Times, serif;
@@ -76,7 +76,7 @@ width: 50em
    
    }
    
-#container-cofre p{
+#sobremessa p{
     font-size: 20em;
     font-size: 20px;
     margin: 70px;
@@ -91,6 +91,38 @@ width: 50em
     
     
 }
+
+.amo{
+    align-items: center;
+    display: flex;
+    padding: 20px;
+}
+
+footer{
+    padding: 10px;
+    margin: 0;
+    
+}
+
+footer i{
+    margin-left:100px;
+    font-size: 50px;
+    
+    
+}
+
+.rodape-i{
+    color: #11d131;
+    font-size: 20px;
+    padding: 30px;
+    margin-left: 23em;
+    border-radius: 0px;
+    
+}
+
+
+
+
 
 
 
