--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body{
     background-color: #5fc953;
     color: #ffffff;
     margin: 0;
-    background: linear-gradient(180deg,#0f1010 8.33%, #cfd215);
+    background: linear-gradient(180deg,#11d131 8.33%, #caaf2b);
 }
 
 header{
